feat: prepare aws-ecs and aws-rds to EUSC AWS partition, migrate Terragrunt cli usage, update Datadog ECS/Postres check configueration